--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,26 +1,86 @@
-
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.15
+aiosignal==1.4.0
+annotated-types==0.7.0
+anyio==3.7.1
+attrs==25.3.0
+certifi==2025.8.3
+charset-normalizer==3.4.3
+click==8.2.1
+colorama==0.4.6
+dataclasses-json==0.6.7
+distro==1.9.0
 fastapi==0.104.1
-uvicorn[standard]==0.24.0
-pydantic==2.5.0
-pydantic-settings==2.1.0
-langchain==0.0.340
-langgraph==0.0.60
-langchain-openai==0.0.5
-langchain-anthropic==0.1.23
-qdrant-client==1.7.0
-redis==5.0.1
-psycopg2-binary==2.9.9
-sqlalchemy==2.0.23
-alembic==1.13.1
-dspy-ai==2.4.9
-tavily-python==0.3.5
-python-multipart==0.0.6
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
-python-dotenv==1.0.0
+filelock==3.19.1
+frozenlist==1.7.0
+fsspec==2025.9.0
+greenlet==3.2.4
+grpcio==1.74.0
+h11==0.16.0
+h2==4.3.0
+hpack==4.1.0
+httpcore==1.0.9
+httptools==0.6.4
 httpx==0.25.2
-websockets==12.0
-sentence-transformers==2.2.2
-scikit-learn==1.3.2
-pandas==2.1.4
-numpy==1.24.3
+httpx-sse==0.4.1
+huggingface-hub==0.34.4
+hyperframe==6.1.0
+idna==3.10
+Jinja2==3.1.6
+jiter==0.11.0
+joblib==1.5.2
+jsonpatch==1.33
+jsonpointer==3.0.0
+langchain==0.3.27
+langchain-community==0.3.29
+langchain-core==0.3.76
+langchain-text-splitters==0.3.11
+langsmith==0.4.27
+MarkupSafe==3.0.2
+marshmallow==3.26.1
+mpmath==1.3.0
+multidict==6.6.4
+mypy_extensions==1.1.0
+networkx==3.5
+numpy==2.3.3
+openai==1.107.2
+orjson==3.11.3
+packaging==25.0
+pillow==11.3.0
+portalocker==3.2.0
+propcache==0.3.2
+protobuf==6.32.1
+pydantic==2.11.9
+pydantic-settings==2.10.1
+pydantic_core==2.33.2
+python-dotenv==1.0.0
+pywin32==311
+PyYAML==6.0.2
+qdrant-client==1.15.1
+regex==2025.9.1
+requests==2.32.5
+requests-toolbelt==1.0.0
+safetensors==0.6.2
+scikit-learn==1.7.2
+scipy==1.16.2
+sentence-transformers==5.1.0
+setuptools==80.9.0
+sniffio==1.3.1
+SQLAlchemy==2.0.43
+starlette==0.27.0
+sympy==1.14.0
+tenacity==9.1.2
+threadpoolctl==3.6.0
+tokenizers==0.22.0
+torch==2.8.0
+tqdm==4.67.1
+transformers==4.56.1
+typing-inspect==0.9.0
+typing-inspection==0.4.1
+typing_extensions==4.15.0
+urllib3==2.5.0
+uvicorn==0.24.0
+watchfiles==1.1.0
+websockets==15.0.1
+yarl==1.20.1
+zstandard==0.25.0
