--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -46,17 +46,21 @@ numpy==2.3.3
 openai==1.107.2
 orjson==3.11.3
 packaging==25.0
+pandas==2.2.3
 pillow==11.3.0
 portalocker==3.2.0
 propcache==0.3.2
 protobuf==6.32.1
+psycopg2-binary==2.9.9
 pydantic==2.11.9
 pydantic-settings==2.10.1
 pydantic_core==2.33.2
 python-dotenv==1.0.0
+python-multipart==0.0.16
 pywin32==311
 PyYAML==6.0.2
 qdrant-client==1.15.1
+redis==5.0.8
 regex==2025.9.1
 requests==2.32.5
 requests-toolbelt==1.0.0
@@ -84,3 +88,6 @@ watchfiles==1.1.0
 websockets==15.0.1
 yarl==1.20.1
 zstandard==0.25.0
+langchain-groq>=0.1.0
+langchain-google-genai>=1.0.0
+tavily-python>=0.3.0
