--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,6 +10,7 @@ click==8.2.1
 colorama==0.4.6
 dataclasses-json==0.6.7
 distro==1.9.0
+dspy-ai
 fastapi==0.104.1
 filelock==3.19.1
 frozenlist==1.7.0
@@ -34,6 +35,7 @@ jsonpointer==3.0.0
 langchain==0.3.27
 langchain-community==0.3.29
 langchain-core==0.3.76
+langchain-huggingface
 langchain-text-splitters==0.3.11
 langsmith==0.4.27
 MarkupSafe==3.0.2
@@ -75,9 +77,9 @@ sympy==1.14.0
 tenacity==9.1.2
 threadpoolctl==3.6.0
 tokenizers==0.22.0
-torch==2.8.0
+torch
 tqdm==4.67.1
-transformers==4.56.1
+transformers
 typing-inspect==0.9.0
 typing-inspection==0.4.1
 typing_extensions==4.15.0
@@ -90,4 +92,3 @@ zstandard==0.25.0
 langchain-groq>=0.1.0
 langchain-google-genai>=1.0.0
 tavily-python>=0.3.0
-dspy-ai>=2.4.0
