--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,9 +19,9 @@ services:
       retries: 5
     restart: unless-stopped
 
-  # Qdrant Vector Database
+  # Qdrant Vector Database - NO HEALTH CHECK
   qdrant:
-    image: qdrant/qdrant:v1.7.4
+    image: qdrant/qdrant:v1.15.1
     container_name: math_agent_qdrant
     ports:
       - "6333:6333"
@@ -31,11 +31,6 @@ services:
     environment:
       QDRANT__SERVICE__HTTP_PORT: 6333
       QDRANT__SERVICE__GRPC_PORT: 6334
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:6333/health"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
     restart: unless-stopped
 
   # Redis (for caching)
