--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -53,7 +53,7 @@ pillow==11.3.0
 portalocker==3.2.0
 propcache==0.3.2
 protobuf==6.32.1
-psycopg2-binary==2.9.9
+psycopg2-binary>=2.9.5
 pydantic==2.11.9
 pydantic-settings==2.10.1
 pydantic_core==2.33.2
